--- a/.github/workflows/export-github-pages.yml
+++ b/.github/workflows/export-github-pages.yml
@@ -1,1 +1,38 @@
 
+name: Export to github pages
+
+on:
+  push:
+    branches: [ master ]
+  workflow_dispatch:
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [ 16.x ]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Installing dependencies
+        run: npm install
+
+      - name: Building and exporting
+        run: npm run build
+
+      - name: Deploying
+        uses: peaceiris/actions-gh-pages@v3.7.3
+        with:
+          publish_branch: github-pages
+          external_repository: johnlozier/Website
+          publish_dir: ./dist
+          destination_dir: codeTyper
+          
