--- a/.github/workflows/export-github-pages.yml
+++ b/.github/workflows/export-github-pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Deploying
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
-          deploy_key: ${{ secrets.ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: github-pages
           external_repository: johnlozier/Website
           publish_dir: ./dist
