--- a/.github/workflows/export-github-pages.yml
+++ b/.github/workflows/export-github-pages.yml
@@ -35,5 +35,5 @@ jobs:
           publish_branch: github-pages
           external_repository: johnlozier/Website
           publish_dir: ./dist
-          destination_dir: codeTyper
+          destination_dir: codetyper
           
